# africallshop-iphone

./: README.md  linphone-Info.plist
Classes/: AboutViewController.xib  AfriCallShopCalLog.h  AfriCallShopCalLog.m  ChatRoomViewController.m  ChatTableViewController.m  ContactDetailsTableViewController.h  ContactDetailsTableViewController.m  ContactDetailsViewController.h  ContactDetailsViewController.m  ContactsTableViewController.h  ContactsTableViewController.m  ContactsViewController.m  DialerViewController.h  HistoryDetailsViewController.h  HistoryDetailsViewController.m  HistoryTableViewController.m  LinphoneAppDelegate.h  LinphoneAppDelegate.m  PhoneMainView.xib  SettingsViewController.m  UserAccount.h  UserAccount.m  WizardViewController.h  WizardViewController.m  myWebViewController.h  myWebViewController.m
Classes/LinphoneUI/: UIChatCell.m  UIHistoryCell.h  UIHistoryCell.m  UIHistoryCell.xib  UILinphone.h  UIMainBar.m  UIStateBar.h  UIStateBar.m  UIStateBar.xib
Classes/LinphoneUI/fr.lproj/: UICallBar~ipad.xib  UIContactDetailsFooter.xib  UIContactDetailsHeader.xib  UIMainBar.xib  UIMainBar~ipad.xib
Classes/Model/: ChatModel.h  ChatModel.m
Classes/Utils/: FastAddressBook.m
Classes/en.lproj/: ChatRoomViewController.xib  ChatViewController.xib  ContactDetailsLabelViewController.xib  ContactDetailsViewController.xib  ContactsViewController.xib  DialerViewController.xib  DialerViewController~ipad.xib  FirstLoginViewController.xib  HistoryDetailsViewController.xib  HistoryViewController.xib  ImageViewController.xib  InCallViewController.xib  IncomingCallViewController.xib  IncomingCallViewController~ipad.xib  WizardViewController.xib  WizardViewController~ipad.xib  WizardViews.xib
Classes/fr.lproj/: ChatRoomViewController.xib  ChatViewController.xib  ContactDetailsLabelViewController.xib  ContactDetailsViewController.xib  ContactsViewController.xib  DialerViewController.xib  DialerViewController~ipad.xib  HistoryDetailsViewController.xib  HistoryViewController.xib  IncomingCallViewController~ipad.xib  WizardViewController.xib  WizardViewController~ipad.xib  WizardViews.xib
Classes/ru.lproj/: ChatRoomViewController.xib  ChatViewController.xib  DialerViewController~ipad.xib  HistoryViewController.xib  WizardViewController.xib  WizardViews.xib
Resources/fr.lproj/: Localizable.strings
liblinphone-sdk/armv7-apple-darwin/include/: x264_config.h
liblinphone-sdk/armv7-apple-darwin/lib/: libilbc.la  liblinphone.la  liblpc2xml.la  libmediastreamer_base.la  libmediastreamer_voip.la  libopencore-amrwb.la  libspeex.la  libspeexdsp.la  libxml2.la  libxml2lpc.la  xml2Conf.sh
liblinphone-sdk/armv7s-apple-darwin/lib/: libbcg729.la  libbellesip.la  libilbc.la  libspeex.la  libspeexdsp.la  libxml2.la  libxml2lpc.la  xml2Conf.sh
liblinphone-sdk/i386-apple-darwin/include/: antlr3config.h  antlr3defs.h
liblinphone-sdk/i386-apple-darwin/lib/: libbcg729.la  libbellesip.la  libilbc.la  liblinphone.la  libortp.la  libspeex.la  xml2Conf.sh
linphone.xcodeproj/: project.pbxproj
submodules/build-armv7-apple-darwin/bcg729/: Makefile  config.status  libtool
submodules/build-armv7-apple-darwin/belle-sip/: Makefile  config.status  libtool
submodules/build-armv7-apple-darwin/libilbc-rfc3951/: Makefile  config.status  libtool
submodules/build-armv7-apple-darwin/linphone/: Makefile  config.h  config.status  libtool  linphone.iss  linphone.spec
submodules/build-armv7-apple-darwin/msamr/: Makefile  config.status  libtool
submodules/build-armv7-apple-darwin/msilbc/: Makefile  config.status  libmsilbc.la  libtool
submodules/build-armv7-apple-darwin/mssilk/: Makefile  config.status  libmssilk.la  libtool
submodules/build-armv7-apple-darwin/msx264/: Makefile  config.status  libtool
submodules/build-armv7s-apple-darwin/bcg729/: Makefile  config.status  libtool
submodules/build-armv7s-apple-darwin/belle-sip/: Makefile  belle-sip.spec  config.h  config.status  libtool
submodules/build-armv7s-apple-darwin/libilbc-rfc3951/: Makefile  config.status  libtool
submodules/build-armv7s-apple-darwin/linphone/: Makefile  config.h  config.status  libtool
submodules/build-armv7s-apple-darwin/msamr/: Makefile  config.status  libtool
submodules/build-armv7s-apple-darwin/msilbc/: Makefile  config.status  libmsilbc.la  libtool  msilbc.iss  msilbc.spec
submodules/build-armv7s-apple-darwin/mssilk/: Makefile  config.status  libmssilk.la  libtool  mssilk.iss
submodules/build-armv7s-apple-darwin/msx264/: Makefile  config.status  libtool  (+1 more)
submodules/libilbc-rfc3951/: .gitignore  Makefile.am  configure.ac  libilbc-rfc3951.spec.in
submodules/msilbc/: .gitignore  Makefile.am  aclocal.m4  autogen.sh  configure.ac  ilbc.c  msilbc.iss.in  msilbc.spec.in
submodules/mssilk/: .gitignore  Android.mk  autogen.sh  configure.ac  silk_dec.c  silk_enc.c
submodules/mssilk/sdk/: Makefile.am
(+1757 files in other folders)
